Added icons and logo

--- a/home.html
+++ b/home.html
@@ -12,18 +12,18 @@
                 
         <div class="col-9 col-m-12">
                 <div class="logotext">
-                <img src="images/logo.jpg" alt="logo">
+                <img src="images/logo.png" alt="logo">
                 VideoWizard
                 </div>
         </div>
         <div class="col-1 col-m-4">
-                <a href="http://www.netflix.com">Home</a>
+            <img src="images/settings.png" alt="settings">
         </div>
         <div class="col-1 col-m-4">
-                <a href="http://www.netflix.com">Profile</a>
+            <img src="images/notifications.png" alt="notifications">
         </div>
         <div class="col-1 col-m-4">
-                <a href="http://www.netflix.com">Search</a>
+            <img src="images/profile.png" alt="profile">
         </div>
 </div>
 
