--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
             <img src="images/profile.png" alt="profile">
         </div>
 </div>
-
+<!-- ksakjsdjsdjsdsd -->
 <div class="row">
         <div class="col-4 col-m-12">
                 <div class="title">
