Added recommended videos section

--- a/home.html
+++ b/home.html
@@ -6,19 +6,18 @@
 <link rel = "stylesheet" type = "text/css" href = "style/myStyle.css" />
 </head>
 <body>
+<div class="container-fluid">
 
 <div class="row">
                 
-        <div class="col-5 col-m-12">
-                <div class="logotext">
+        <div class="col-md-2 logotext">
                 <img src="images/logo.png" alt="logo">
                 VideoWizard
-                </div>
         </div>
-        <div class="col-5 col-m-4">
+        <div class="col-md-8 container-fluid searchbar">
                 <input type="text" name="search" placeholder="Search..">
         </div>
-        <div class="col-2 col-m-4">
+        <div class="col-md-2">
             <div class="btn-group" role="group" aria-label="Basic example">
                     <button type="button" class="btn btn-secondary"><img src="images/settings.png" alt="settings"></button>
                     <button type="button" class="btn btn-secondary"><img src="images/notifications.png" alt="notifications"></button>
@@ -26,6 +25,17 @@
             </div>
         </div>
 </div>
+</div>
+<div class="container-fluid recommendedvideos">
+        <div class="row">
+                Recommended Videos
+        </div> 
+        <div class="row">
+                <button type="button" class="btn"><img src="images/leftarrow.png" alt="leftarrow"></button>
+                <button type="button" class="btn"><img src="images/rightarrow.png" alt="rightarrow"></button>  
+        </div> 
+</div>
+
 
 <hr>
 
