Changed some videos

--- a/home.html
+++ b/home.html
@@ -37,26 +37,12 @@
                         </div>
                         <div class="recommendedvideo col-md-3">  
                                 <h1> Video 1
-                                        <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
-                                        <video id="div1" width="216" height="180" draggable="true" 
-                                        ondragstart="drag(event)" controls>
-                                                <source src="imagesog/grayson_allen_highlights.mp4" type="video/mp4">
-                                                <source src="imagesog/grayson_allen_highlights.ogg" type="video/ogg">
-                                                Your browser does not support the video tag.
-                                        </video>
-                                        </div>
+                                        <iframe width="248" height="180" src="https://www.youtube.com/embed/gxcaRe53vsQ?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                                 </h1>
                         </div>
                         <div class="recommendedvideo col-md-3"> 
                                 <h1> Video 2
-                                        <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
-                                        <video id="div1" width="216" height="180" draggable="true" 
-                                        ondragstart="drag(event)" controls>
-                                                <source src="imagesog/grayson_allen_highlights.mp4" type="video/mp4">
-                                                <source src="imagesog/grayson_allen_highlights.ogg" type="video/ogg">
-                                                Your browser does not support the video tag.
-                                        </video>
-                                        </div>
+                                        <iframe width="248" height="180" src="https://www.youtube.com/embed/Y6qEERy0wL8?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                                 </h1>
                         </div>
                         <div class="recommendedvideo col-md-3"> 
