--- a/home.html
+++ b/home.html
@@ -36,27 +36,17 @@
                                 <button type="button" class="btn"><img src="images/leftarrow.png" alt="leftarrow"></button>
                         </div>
                         <div class="recommendedvideo col-md-3">  
-                                <h1> Video 1
-                                        <iframe width="248" height="180" src="https://www.youtube.com/embed/gxcaRe53vsQ?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-                                </h1>
+                                Video 1
+                                <iframe width="360" height="216" src="https://www.youtube.com/embed/gxcaRe53vsQ?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                         </div>
                         <div class="recommendedvideo col-md-3"> 
-                                <h1> Video 2
-                                        <iframe width="248" height="180" src="https://www.youtube.com/embed/Y6qEERy0wL8?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-                                </h1>
+                                Video 2
+                                <iframe width="360" height="216" src="https://www.youtube.com/embed/Y6qEERy0wL8?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                         </div>
                         <div class="recommendedvideo col-md-3"> 
-                                        <h1> Video 3
-                                                <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
-                                                <video id="div1" width="216" height="180" draggable="true" 
-                                                ondragstart="drag(event)" controls>
-                                                        <source src="imagesog/grayson_allen_highlights.mp4" type="video/mp4">
-                                                        <source src="imagesog/grayson_allen_highlights.ogg" type="video/ogg">
-                                                        Your browser does not support the video tag.
-                                                </video>
-                                                </div>
-                                        </h1>
-                                </div>
+                                Video 3
+                                <iframe width="360" height="216" src="https://www.youtube.com/embed/MbRm5s3i2ik?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>                
+                        </div>
                         <div class="arrow col-md-1">
                         <button type="button" class="btn"><img src="images/rightarrow.png" alt="rightarrow"></button>  
                         </div>
@@ -102,7 +92,7 @@
                                 </div> <!-- end chat -->
                         </div> <!-- end live-chat -->
                 </div>
-                <div class="col playlistbox">
+                <div class="col-6 playlistbox">
                         Playlists
                         <div class="tab">
                         <button class="tablinks" onclick="openCity(event, 'Playlist1')">Playlist1</button>
@@ -113,42 +103,21 @@
                         <div id="Playlist1" class="tabcontent">
                         <h3>Playlist1</h3>
                                 <div class="recommendedvideo">
-                                        <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
-                                        <video id="div1" width="216" height="180" draggable="true" 
-                                        ondragstart="drag(event)" controls>
-                                                <source src="imagesog/grayson_allen_highlights.mp4" type="video/mp4">
-                                                <source src="imagesog/grayson_allen_highlights.ogg" type="video/ogg">
-                                                Your browser does not support the video tag.
-                                        </video>
-                                        </div>
+                                        <iframe width="360" height="216" src="https://www.youtube.com/embed/qQTVuRrZO8w?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                                 </div>
                         </div>
                         
                         <div id="Playlist2" class="tabcontent">
                         <h3>Playlist2</h3>
                                 <div class="recommendedvideo">
-                                        <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
-                                        <video id="div1" width="216" height="180" draggable="true" 
-                                        ondragstart="drag(event)" controls>
-                                                <source src="imagesog/grayson_allen_highlights.mp4" type="video/mp4">
-                                                <source src="imagesog/grayson_allen_highlights.ogg" type="video/ogg">
-                                                Your browser does not support the video tag.
-                                        </video>
-                                        </div>
+                                        <iframe width="360" height="216" src="https://www.youtube.com/embed/UXm1xHECZu0?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                                 </div>
                         </div>
                         
                         <div id="Playlist3" class="tabcontent">
                         <h3>Playlist3</h3>
                                 <div class="recommendedvideo">
-                                        <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
-                                        <video id="div1" width="216" height="180" draggable="true" 
-                                        ondragstart="drag(event)" controls>
-                                                <source src="imagesog/grayson_allen_highlights.mp4" type="video/mp4">
-                                                <source src="imagesog/grayson_allen_highlights.ogg" type="video/ogg">
-                                                Your browser does not support the video tag.
-                                        </video>
-                                        </div>
+                                        <iframe width="360" height="216" src="https://www.youtube.com/embed/DePRyZE5sn4?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                                 </div>
                         </div>
 
