--- a/home.html
+++ b/home.html
@@ -52,9 +52,9 @@
                         </div>
                 </div> 
         </div>
-<div class="container">
+<div class="container-fluid">
         <div class="row">
-                <div class ="col-4 livechatbox">
+                <div class ="col livechatbox">
                         <div id="live-chat"> 
                                 <header class="clearfix">
                                         <span class="chat-message-counter">3</span>
@@ -92,7 +92,7 @@
                                 </div> <!-- end chat -->
                         </div> <!-- end live-chat -->
                 </div>
-                <div class="col-6 playlistbox">
+                <div class="col playlistbox">
                         Playlists
                         <div class="tab">
                         <button class="tablinks" onclick="openCity(event, 'Playlist1')">Playlist1</button>
