--- a/home.html
+++ b/home.html
@@ -7,20 +7,20 @@
 </head>
 <body>
 <div class="container-fluid">
-        <div class="row">
-                <div class="col-md-2 logotext">
-                        <img src="images/logo.png" alt="logo">
-                        VideoWizard
+        <div class="row toolbarbox">
+                <div class="col-md-2">
+                        <a href="home.html">
+                                <img src="images/logo.png" alt="logo">
+                                <div class="logotext">VideoWizard</div>
+                        </a>
                 </div>
-                <div class="col-md-8 container-fluid searchbar">
+                <div class="col-md-8 searchbar">
                         <input type="text" name="search" placeholder="Search..">
                 </div>
                 <div class="col-md-2">
-                <div class="btn-group" role="group" aria-label="Basic example">
                         <button type="button" class="btn btn-secondary"><img src="images/settings.png" alt="settings"></button>
                         <button type="button" class="btn btn-secondary"><img src="images/notifications.png" alt="notifications"></button>
                         <button type="button" class="btn btn-secondary"><img src="images/profile.png" alt="profile"></button>
-                </div>
                 </div>
         </div>
 </div>
@@ -32,19 +32,16 @@
                             </div>
                     </div> 
                     <div class="row">
-                        <div class="arrow col-md-1">
+                        <div class="arrow col-md-1 col-md-offset-1">
                                 <button type="button" class="btn"><img src="images/leftarrow.png" alt="leftarrow"></button>
                         </div>
-                        <div class="recommendedvideo col-md-3">  
-                                Video 1
+                        <div class="recommendedvideo col-md-3">
                                 <iframe width="360" height="216" src="https://www.youtube.com/embed/gxcaRe53vsQ?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                         </div>
-                        <div class="recommendedvideo col-md-3"> 
-                                Video 2
+                        <div class="recommendedvideo col-md-3">
                                 <iframe width="360" height="216" src="https://www.youtube.com/embed/Y6qEERy0wL8?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                         </div>
-                        <div class="recommendedvideo col-md-3"> 
-                                Video 3
+                        <div class="recommendedvideo col-md-3">
                                 <iframe width="360" height="216" src="https://www.youtube.com/embed/MbRm5s3i2ik?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>                
                         </div>
                         <div class="arrow col-md-1">
@@ -53,8 +50,9 @@
                     </div> 
                 </div>
             </div>
+            <hr>
+            <h1>Subscribe to unlock the content below!</h1>
             <div class="container-fluid darkClass">
-                                Subscribe to Unlock
                 <div class="row">
                     <div class ="col-4 livechatbox">
                         <div id="live-chat"> 
