--- a/homeSubscribed.html
+++ b/homeSubscribed.html
@@ -7,12 +7,14 @@
 </head>
 <body>
 <div class="container-fluid">
-        <div class="row">
-                <div class="col-md-2 logotext">
-                        <img src="images/logo.png" alt="logo">
-                        VideoWizard
+        <div class="row toolbarbox">
+                <div class="col-md-2">
+                        <a href="homeSubscribed.html">
+                                <img src="images/logo.png" alt="logo">
+                                <div class="logotext">VideoWizard</div>
+                        </a>
                 </div>
-                <div class="col-md-8 container-fluid searchbar">
+                <div class="col-md-8 searchbar">
                         <input type="text" name="search" placeholder="Search..">
                 </div>
                 <div class="col-md-2">
@@ -35,16 +37,13 @@
             <div class="arrow col-md-1">
                     <button type="button" class="btn"><img src="images/leftarrow.png" alt="leftarrow"></button>
             </div>
-            <div class="recommendedvideo col-md-3">  
-                    Video 1
+            <div class="recommendedvideo col-md-3">
                     <iframe width="360" height="216" src="https://www.youtube.com/embed/gxcaRe53vsQ?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
             </div>
-            <div class="recommendedvideo col-md-3"> 
-                    Video 2
+            <div class="recommendedvideo col-md-3">
                     <iframe width="360" height="216" src="https://www.youtube.com/embed/Y6qEERy0wL8?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
             </div>
-            <div class="recommendedvideo col-md-3"> 
-                    Video 3
+            <div class="recommendedvideo col-md-3">
                     <iframe width="360" height="216" src="https://www.youtube.com/embed/MbRm5s3i2ik?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>                
             </div>
             <div class="arrow col-md-1">
