--- a/videowizard.html
+++ b/videowizard.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style3.css">
 </head>
 <body>
 
@@ -41,55 +41,57 @@
 </div>
 <div class="container-fluid recommendedvideosbox">
 <div class="row">
-    
-</div> 
-<div class="row">
     <div class="video1">  
-        <h1> Video Title
-            <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
-                <video id="div1" width="550" height="315" draggable="true" 
-                ondragstart="drag(event)" controls>
-                    <source src="imagesog/grayson_allen_highlights.mp4" type="video/mp4">
-                    <source src="imagesog/grayson_allen_highlights.ogg" type="video/ogg">
-                    Your browser does not support the video tag.
-                </video>
-            </div>
-        </h1>
-        <div class ="row2">
-            <div class ="col1">
-                <h2 class= "video_descrip">
-                    The highlights of Grayson Allen from the 2016-17 season through games 1-11. 
-                    Grayson Allen is having another All-American season. 
-                    He is averaging 17.7 points, 3.8 assists and 4.8 rebounds.
-                </h2>
-                <h2>
+        <div class="bigcol1">
+            <h1> Video Title
+                <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
+                    <video id="div1" width="550" height="315" draggable="true" 
+                    ondragstart="drag(event)" controls>
+                        <source src="images/grayson_allen_highlights.mp4" type="video/mp4">
+                        <source src="images/grayson_allen_highlights.ogg" type="video/ogg">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+            </h1>
+                <div class ="col1">
+                    <h2 class= "video_descrip">
+                        The highlights of Grayson Allen from the 2016-17 season through games 1-11. 
+                        Grayson Allen is having another All-American season. 
+                        He is averaging 17.7 points, 3.8 assists and 4.8 rebounds.
+                    </h2>
+                    <h2>
                         <button type="button" id="close-image" onClick="onClick1()">
-                            <img src="imagesog/heart.png"></button>
+                            <img src="images/heart.png"></button>
                         <a id="clicks1"> 432 likes</a>
-                </h2>
-                <h2>
-                    <button type="button" id="close-image" onClick="onClick2()">
-                        <img src="imagesog/sharing_symbol.jpg"></button>
-                    <a id="clicks2"> 1000 sharing</a>
-                </h2>
-            </div>
-
-            <div class ="col2">
-                <button type="button" id="close-image" onClick="onClick1()">
-                    <img src="images/save_circle.png"></button> Add to a playlist
-                <br>
-                <br>
-                <button type="button" id="close-image" onClick="onClick1()">
-                    <img src="images/save-button.png"></button> Save to Favorites
-            </div>
-        </div>       
-    </div>
+                    </h2>
+                    <h2>
+                        <button type="button" id="close-image" onClick="onClick2()">
+                            <img src="images/sharing_symbol.jpg"></button>
+                        <a id="clicks2"> 1000 sharing</a>
+                    </h2>
+                    <br>
+                    <input type="text" name="search" placeholder="Add a comment...">
+                </div>
+                <div class ="col2">
+                    <button type="button" id="close-image" onClick="onClick1()">
+                        <img src="images/save_circle.png"></button> Add to a playlist
+                    <br>
+                    <br>
+                    <button type="button" id="close-image" onClick="onClick1()">
+                        <img src="images/save-button.png"></button> Save to Favorites
+                </div>       
+        </div>
     <!-- <button type="button" class="btn"><img src="images/leftarrow.png" alt="leftarrow"></button>
     <button type="button" class="btn"><img src="images/rightarrow.png" alt="right arrow"></button> -->
-</div> 
+    </div> 
+    <div class="video2">
+        <div class="bigcol2">
+            FUCK!
+        </div>                
+    </div>
 </div>
-
-<hr>
+</div>
+hr>
 
 Insert video page here
 
