Centered the search bar

--- a/homeSubscribed.html
+++ b/homeSubscribed.html
@@ -14,8 +14,8 @@
                                 <div class="logotext">VideoWizard</div>
                         </a>
                 </div>
-                <div class="col-md-8 searchbar">
-                        <input type="text" name="search" placeholder="Search..">
+                <div class="col-md-8 search">
+                        <input class="search" type="text" name="search" placeholder="Search..">
                 </div>
                 <div class="col-md-2">
                 <div class="btn-group" role="group" aria-label="Basic example">
