--- a/login.html
+++ b/login.html
@@ -8,23 +8,22 @@
 
 <body>
 <div class="container-fluid">
-<div class="row">
-
-        <div class="col-md-2 logotext">
-                <img src="images/logo.png" alt="logo">
-                VideoWizard
+        <div class="row">
+                <div class="col-md-2">
+                        <a href="homeSubscribed.html">
+                                <img src="images/logo.png" alt="logo">
+                                <div class="logotext">VideoWizard</div>
+                        </a>
+                </div>
+                <div class="col-md-8 search">
+                        <input class="search" type="text" name="search" placeholder="Search..">
+                </div>
+                <div class="col-md-2">
+                        <button type="button" class="btn btn-secondary"><img src="images/settings.png" alt="settings"></button>
+                        <button type="button" class="btn btn-secondary"><img src="images/notifications.png" alt="notifications"></button>
+                        <button type="button" class="btn btn-secondary"><img src="images/profile.png" alt="profile"></button>
+                </div>
         </div>
-        <div class="col-md-8 container-fluid searchbar">
-                <input class ="search" type="text" name="search" placeholder="Search..">
-        </div>
-        <div class="col-md-2">
-            <div class="btn-group" role="group" aria-label="Basic example">
-                    <button type="button" class="btn btn-secondary"><img src="images/settings.png" alt="settings"></button>
-                    <button type="button" class="btn btn-secondary"><img src="images/notifications.png" alt="notifications"></button>
-                    <button type="button" class="btn btn-secondary"><img src="images/profile.png" alt="profile"></button>
-            </div>
-        </div>
-</div>
 </div>
 <br>
 <br>
