--- a/video.html
+++ b/video.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <link rel="stylesheet" href="style/style3.css">
+    <link rel="stylesheet" href="style/videoStyle.css">
 </head>
 <body>
 
@@ -21,22 +21,21 @@
 
 <!--Creates the header at the top of the webpage-->
 <div class="container-fluid">
-    <div class="row">
-        
-        <div class="col-md-2 logotext">
-            <img src="images/logo.png" alt="logo">
-            VideoWizard
-        </div>
-        <div class="col-md-8 container-fluid searchbar">
-            <input type="text" name="search" placeholder="Search..">
-        </div>
-        <div class="col-md-2">
-            <div class="btn-group" role="group" aria-label="Basic example">
+    <div class="row toolbarbox">
+            <div class="col-md-2">
+                    <a href="homeSubscribed.html">
+                            <img src="images/logo.png" alt="logo">
+                            <div class="logotext">VideoWizard</div>
+                    </a>
+            </div>
+            <div class="col-md-8 search">
+                    <input class="search" type="text" name="search" placeholder="Search..">
+            </div>
+            <div class="col-md-2">
                     <button type="button" class="btn btn-secondary"><img src="images/settings.png" alt="settings"></button>
                     <button type="button" class="btn btn-secondary"><img src="images/notifications.png" alt="notifications"></button>
                     <button type="button" class="btn btn-secondary"><img src="images/profile.png" alt="profile"></button>
             </div>
-        </div>
     </div>
 </div>
 <div class="container-fluid recommendedvideosbox">
