--- a/home.html
+++ b/home.html
@@ -14,8 +14,8 @@
                                 <div class="logotext">VideoWizard</div>
                         </a>
                 </div>
-                <div class="col-md-8 searchbar">
-                        <input type="text" name="search" placeholder="Search..">
+                <div class="col-md-8 search">
+                        <input class="search" type="text" name="search" placeholder="Search..">
                 </div>
                 <div class="col-md-2">
                         <button type="button" class="btn btn-secondary"><img src="images/settings.png" alt="settings"></button>
