fixed some video page things

--- a/video.html
+++ b/video.html
@@ -38,7 +38,7 @@
             </div>
     </div>
 </div>
-<div class="container-fluid recommendedvideosbox">
+<div class="container-fluid currentvideobox">
 <div class="row">
     <div class="video1">  
         <div class="bigcol1">
