Updated video page javascript

--- a/login.html
+++ b/login.html
@@ -124,49 +124,6 @@
 
   <br>
   <br>
-<!--
-          <div class="container-fluid">
-          <div class="col-md-12">
-                <div class= "recommendedvideosbox">
-                        <div class="row">
-                                Recommended Videos
-                        </div>
-                        <div class="row">
-                                <div class="arrow col-md-0">
-                                        <button type="button" class="btn"><img src="images/leftarrow.png" alt="leftarrow"></button>
-                                </div>
-                                <div class="recommendedvideo col-md-5">
-                                        <h1> Video 1
-                                                <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
-                                                <video id="div1" width="550" height="315" draggable="true"
-                                                ondragstart="drag(event)" controls>
-                                                        <source src="imagesog/grayson_allen_highlights.mp4" type="video/mp4">
-                                                        <source src="imagesog/grayson_allen_highlights.ogg" type="video/ogg">
-                                                        Your browser does not support the video tag.
-                                                </video>
-                                                </div>
-                                        </h1>
-                                </div>
-                                <div class="recommendedvideo col-md-5">
-                                        <h1> Video 2
-                                                <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)">
-                                                <video id="div1" width="550" height="315" draggable="true"
-                                                ondragstart="drag(event)" controls>
-                                                        <source src="imagesog/grayson_allen_highlights.mp4" type="video/mp4">
-                                                        <source src="imagesog/grayson_allen_highlights.ogg" type="video/ogg">
-                                                        Your browser does not support the video tag.
-                                                </video>
-                                                </div>
-                                        </h1>
-                                </div>
-                                <div class="arrow col-md-1">
-                                <button type="button" class="btn"><img src="images/rightarrow.png" alt="rightarrow"></button>
-                                </div>
-                        </div>
-                </div>
-        </div>
-</div>
--->
 
 <div class="footertext">
         <a href="Subscribe Page">Subscribe</a>
@@ -181,5 +138,5 @@
   crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-<script type="text/javascript" src="script2.js"></script>
+<script type="text/javascript" src="script/loginScript.js"></script>
 </html>
