Added related videos

--- a/video.html
+++ b/video.html
@@ -26,8 +26,8 @@
     </div>
 </div>
 <div class="container-fluid">
-<div class="row">  
-        <div class="col-6 currentvideobox">
+<div class="row">
+        <div class="col-md-7 currentvideobox">
                 <iframe width="640" height="360" src="https://www.youtube.com/embed/wyOQh7O0VKY?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                 <div class="row">
                     <button class="vidbtn" type="button" id="close-image">
@@ -43,10 +43,9 @@
                             <img src="images/save-button.png">
                     </button>
                 </div>
-                <div class="row">
                         St. Francis (PA) vs. Duke: #1<br/>
                         <a href="#" class="read_more">Read More</a><br/>
-                        <span class="more_text">
+                        <div class="more_text">
                                 Duke dominated St. Francis (PA) on Tuesday, 
                                 scoring 71 points in the first half en route to a 124-67 win. 
                                 Marvin Bagley III scored a team-high 21 points and 11 rebounds, 
@@ -54,7 +53,7 @@
                                 17 points and 10 rebounds. Wendell Carter Jr. added an additional
                                 15 points and Grayson Allen and Gary Trent Jr. had 14 apiece. 
                                 It was the fifth-most points scored in Blue Devils' history.
-                        </span>
+                        </div>
                                 <div id="live-chat"> 
                                         <header class="clearfix">
                                                 <span class="chat-message-counter">3</span>
@@ -90,13 +89,15 @@
                                                         </form>
                                                     </div> <!-- end chat -->
                                             </div> <!-- end live-chat -->
-                </div>
 
+
+        <div class="col-md-4 relatedvideobox">
+            <h1>Related Videos</h1>
+            <iframe width="427" height="240" src="https://www.youtube.com/embed/l-Vyia7UkO0?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+            <iframe width="427" height="240" src="https://www.youtube.com/embed/FuZHRbLkO1I?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+            <iframe width="427" height="240" src="https://www.youtube.com/embed/ZkfPYw7CK10?ecver=1" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
         </div>
-
-        <div class="col-4">
-            
-        </div>       
+    </div>
 </div>
 </div>
 
