--- a/login.html
+++ b/login.html
@@ -87,7 +87,7 @@
 										<div class="row">
 											<div class="col-lg-12">
 												<div class="text-center">
-													<a href="homepage.html" tabindex="5" class="forgot-password">Forgot Password?</a>
+													<a href="homeSubscribed.html" tabindex="5" class="forgot-password">Forgot Password?</a>
 												</div>
 											</div>
 										</div>
