Javascript video description

--- a/video.html
+++ b/video.html
@@ -45,7 +45,7 @@
                 </div>
                         St. Francis (PA) vs. Duke: #1<br/>
                         <a href="#" class="read_more">Read More</a><br/>
-                        <div class="more_text">
+                        <div id= "more_text">
                                 Duke dominated St. Francis (PA) on Tuesday, 
                                 scoring 71 points in the first half en route to a 124-67 win. 
                                 Marvin Bagley III scored a team-high 21 points and 11 rebounds, 
