--- a/home.html
+++ b/home.html
@@ -51,7 +51,9 @@
                 </div>
             </div>
             <hr>
-            <h1>Subscribe to unlock the content below!</h1>
+            <a href="login.html">
+                <h1>Subscribe to unlock the content below!</h1>    
+            </a>
             <div class="container-fluid darkClass">
                 <div class="row">
                     <div class ="col-4 livechatbox">
@@ -126,7 +128,7 @@
 <div class="footertext">        
         <a href="login.html">Subscribe</a>
         |
-        <a href="Contact Us Page">Contact Us</a>
+        <a href="login.html">Contact Us</a>
 </div>
 
 
