--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@
 					<div class="panel-body">
 						<div class="row">
 							<div class="col-lg-12">
-								<form id="login-form" action="home.html" method="post" role="form" style="display: block;">
+								<form id="login-form" action="homeSubscribed.html" method="post" role="form" style="display: block;">
 									<div class="form-group">
 										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
 									</div>
@@ -93,7 +93,7 @@
 										</div>
 									</div>
 								</form>
-								<form id="register-form" action="homepage.html" method="post" role="form" style="display: none;">
+								<form id="register-form" action="homeSubscribed.html" method="post" role="form" style="display: none;">
 									<div class="form-group">
 										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
 									</div>
@@ -126,9 +126,9 @@
   <br>
 
 <div class="footertext">
-        <a href="Subscribe Page">Subscribe</a>
+        <a href="login.html">Subscribe</a>
         |
-        <a href="Contact Us Page">Contact Us</a>
+        <a href="login.html">Contact Us</a>
 </div>
 
 </body>
