--- a/homeSubscribed.html
+++ b/homeSubscribed.html
@@ -124,7 +124,7 @@
 <div class="footertext">        
         <a href="login.html">Subscribe</a>
         |
-        <a href="Contact Us Page">Contact Us</a>
+        <a href="login.html">Contact Us</a>
 </div>
 
 
