--- a/video.html
+++ b/video.html
@@ -103,9 +103,9 @@
 
 <hr>
 <div class="footertext">        
-<a href="Subscribe Page">Subscribe</a>
+<a href="login.html">Subscribe</a>
 |
-<a href="Contact Us Page">Contact Us</a>
+<a href="login.html">Contact Us</a>
 </div>
 
 </body>
