--- a/video.html
+++ b/video.html
@@ -57,7 +57,7 @@
                                 <div id="live-chat"> 
                                         <header class="clearfix">
                                                 <span class="chat-message-counter">3</span>
-                                                    Comments
+                                            <h4>Comments</h4>
                                                     </header>
                                                     <div class="chat">
                                                         <div class="chat-history">
