--- a/home.html
+++ b/home.html
@@ -94,7 +94,7 @@
                                         </div> <!-- end chat -->
                                 </div> <!-- end live-chat -->
                         <div class="col-7 playlistbox">
-                            Playlists
+                            <h3>Playlists</h3>
                             <div class="tab">
                             <button class="tablinks">Playlist1</button>
                             <button class="tablinks">Playlist2</button>
