--- a/homeSubscribed.html
+++ b/homeSubscribed.html
@@ -90,7 +90,7 @@
                             </div> <!-- end chat -->
                     </div> <!-- end live-chat -->
             <div class="col-7 playlistbox">
-                Playlists
+                <h3>Playlists</h3>
                 <div class="tab">
                 <button class="tablinks" onclick="openCity(event, 'Playlist1')">Playlist1</button>
                 <button class="tablinks" onclick="openCity(event, 'Playlist2')">Playlist2</button>
